# BCompare-LinuxMenus

./: .gitignore  BUILD  Makefile  README.md
caja/: Makefile  bcompare-caja.c
kde/: .gitignore  CMakeLists.txt  LICENSE.txt  Messages.sh  README  README.md  bcompare_config.cpp  bcompare_config.h  bcompare_ext_kde.cpp  bcompare_ext_kde.desktop  bcompare_ext_kde.h  bcompare_ext_kde.json  bcompare_ext_kde5.h  bcompare_icon.qrc
kde/icon/: LICENSE.txt
kde/po/fr/: bcompare_ext_kde.po
kde4/: CMakeLists.txt  README  bcompare_ext_kde.cpp
kde5/: CMakeLists.txt  Messages.sh  README  bcompare_config.cpp  bcompare_config.h  bcompare_ext_kde5.cpp  bcompare_ext_kde5.h
kde5/po/fr/: bcompare_ext_kde5.po
kde6/: .gitignore  CMakeLists.txt  Messages.sh  README  bcompare_config.cpp  bcompare_config.h  bcompare_ext_kde6.cpp  bcompare_ext_kde6.h
kde6/po/fr/: bcompare_ext_kde6.po
konq/: Makefile  bcompare_ext_konq.cpp  bcompare_ext_konq.desktop  bcompare_ext_konq.h
nautilus/: Makefile  bcompare-ext-nautilus.amd64.so.ext4  bcompare-nautilus.c
nemo/: Makefile  bcompare-nemo.c
thunar/: Makefile  bcompare-submenu-thunarx.c  bcompare-submenu-thunarx.h  bcompare-thunarx.c
